2007-07-03 [paul]	0.14.0

	0.14 released

2007-07-03 [paul]	0.13.0cvs3

	* po/hu.po
	* po/pt_BR.po
	* po/zh_CN.po
		updated by Pader Rezso, Frederico
		Goncalves Guimaraes, and Ralgh Young

2007-06-21 [colin]	0.13.0cvs2

	* src/plugin.c
		Update plugin API

2007-05-09 [colin]	0.13.0cvs1

	* src/date.c
		Use reentrant variant on time functions

2007-05-08 [paul]	0.13.0

	0.13 released

2007-05-02 [ticho]	0.12.0cvs5

	* src/feed.c
		Small fix in new item comparing routine.

2007-05-02 [ticho]	0.12.0cvs4

	* src/feed.c
		Extract Message-ID from stored items.

2007-05-02 [ticho]	0.12.0cvs3

	* src/feed.c
	* src/feed.h
	* src/parsers.c
		Rewrite first phase of item comparing (check if item
		already exists) to be less stupid.

2007-04-22 [ticho]	0.12.0cvs2

	* src/rssyl_prefs.h
		Fix NUM_PREFS

2007-04-20 [ticho]	0.12.0cvs1

	* src/feed.c
	* src/rssyl_prefs.c
	* src/rssyl_prefs.h
		Make libcurl verbose if debug is enabled.
		Add option to set path to cookie.txt file,
		to be read by libcurl.
		Patches by <stephenlamppost at users.sourceforge.net>

2007-04-16 [paul]	0.12.0

	0.12 released

2007-04-16 [paul]	0.11.0cvs9

	* po/ca.po
	* po/es.po
	* po/hu.po
	* po/pt_BR.po
	* po/sr.po
	* po/zh_CN.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Pader Rezso, Frederico Goncalves Guimaraes,
		Aleksandar Urosevic and Ralgh Young

2007-03-31 [colin]	0.11.0cvs8

	* src/feed.c
	* src/plugin.c
	* src/rssyl_cb_menu.c
		Offline override: follow API

2007-03-29 [ticho]	0.11.0cvs7

	* src/feed.c
	* src/rssyl_gtk.c
	* src/rssyl_prefs.c
	* src/rssyl_prefs.h
		Applied patch from Paweł Pękala <c0rn at o2.pl> to use claws-mail's
		timeout setting instead of our own. Removed bogus default values in
		parentheses in feed properties labels.

2007-03-21 [wwp]	0.11.0cvs6

	* configure.ac
		Bumped up the minimal Claws-Mail version this
		plugin requires.

2007-03-21 [wwp]	0.11.0cvs5

	* src/feed.c
		Reflect changes to the log API (2.8.1cvs30).

2007-03-11 [ticho]	0.11.0cvs4

	* src/feed.c