@@ -33,6 +33,7 @@ gchar *rssyl_strreplace(gchar *source, gchar *pattern,
 {
 	gchar *new, *w_new, *c;
 	guint count = 0, final_length;
+	size_t len_pattern, len_replacement;
 
 /*
 	debug_print("RSSyl: ======= strreplace: '%s': '%s'->'%s'\n", source, pattern,
@@ -54,10 +55,13 @@ gchar *rssyl_strreplace(gchar *source, gchar *pattern,
 		return NULL;
 	}
 
+	len_pattern = strlen(pattern);
+	len_replacement = strlen(replacement);
+
 	c = source;
 	while( ( c = g_strstr_len(c, strlen(c), pattern) ) ) {
 		count++;
-		c += strlen(pattern);
+		c += len_pattern;
 	}
 
 /*
@@ -65,8 +69,8 @@ gchar *rssyl_strreplace(gchar *source, gchar *pattern,
 */
 
 	final_length = strlen(source)
-		- ( count * strlen(pattern) )
-		+ ( count * strlen(replacement) );
+		- ( count * len_pattern )
+		+ ( count * len_replacement );
 
 	new = malloc(final_length + 1);
 	w_new = new;
@@ -75,18 +79,18 @@ gchar *rssyl_strreplace(gchar *source, gchar *pattern,
 	c = source;
 
 	while( *c != '\0' ) {
-		if( !memcmp(c, pattern, strlen(pattern)) ) {
+		if( !memcmp(c, pattern, len_pattern) ) {
 			gboolean break_after_rep = FALSE;
 			int i;
-			if (*(c + strlen(pattern)) == '\0')
+			if (*(c + len_pattern) == '\0')
 				break_after_rep = TRUE;
-			for (i = 0; i < strlen(replacement); i++) {
+			for (i = 0; i < len_replacement; i++) {
 				*w_new = replacement[i];
 				w_new++;
 			}
 			if (break_after_rep)
 				break;
-			c = c + strlen(pattern);
+			c = c + len_pattern;
 		} else {
 			*w_new = *c;
 			w_new++;
